--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ testpaths = ["tests"]
 dev = [
     "memory-profiler>=0.61.0",
     "pytest>=8.3.4",
+    "pytest-benchmark>=5.1.0",
     "pytest-cov>=6.0.0",
     "python-coveralls>=2.9.3",
+    "ruff>=0.9.2",
 ]
