--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ packages = ["src/tika"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build]
+include = ["src/tika/**/*.jar"]
+
 [tool.pytest.ini_options]
 pythonpath = ["src"]
 testpaths = ["tests"]
