--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,13 @@ pythonpath = ["src"]
 testpaths = ["test"]
 markers = ["benchmark: mark a test as a benchmark"]
 
-[project.scripts]
-test = "pytest -v -m 'not benchmark'"
-benchmark = "pytest -v -m benchmark"
+[tool.coverage.run]
+relative_files = true
 
 [dependency-groups]
 dev = [
+    "coverage[toml]>=7.6.10",
+    "coveralls>=4.0.1",
     "memory-profiler>=0.61.0",
     "pytest>=8.3.4",
     "pytest-benchmark>=5.1.0",
