--- a/.github/workflows/update-readme-coverage.yml
+++ b/.github/workflows/update-readme-coverage.yml
@@ -1,7 +1,5 @@
-name: Test Coverage
+name: Update Coverage Badge
 on:
-  pull_request:
-    branches: ["*"]
   push:
     branches: ["master"]
 
@@ -11,13 +9,16 @@ permissions:
   pull-requests: write
 
 jobs:
-  coverage:
+  update-coverage-badge:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v2
         with:
           python-version: "3.12"
 
@@ -34,8 +35,18 @@ jobs:
           uv run pytest -m 'not benchmark' --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=tika test/ | tee pytest-coverage.txt
 
       - name: Pytest coverage comment
+        id: coverage-comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          hide-comment: true
           pytest-coverage-path: ./pytest-coverage.txt
-          junitxml-path: ./pytest.xml
+
+      - name: Update README with Coverage Badge
+        run: |
+          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n${{ steps.coverage-comment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+
+      - name: Commit & Push changes
+        uses: actions-js/push@master
+        with:
+          message: "Update coverage badge"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
