--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,7 +4,7 @@ name: Generate and deploy documentation
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main", "master", "add-automated-documentation"]
+    branches: ["master", "add-automated-documentation"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './docs/build/html'
+          path: "./docs/build/html"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
