--- a/.github/workflows/update-readme-coverage.yml
+++ b/.github/workflows/update-readme-coverage.yml
@@ -1,52 +1,40 @@
-name: Update Coverage Badge
+name: Update Coverage on Readme
 on:
   push:
-    branches: ["master"]
 
+# https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
+# `contents` is for permission to the contents of the repository.
+# `pull-requests` is for permission to pull request
 permissions:
   contents: write
   checks: write
   pull-requests: write
 
 jobs:
-  update-coverage-badge:
+  update-coverage-on-readme:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
-          persist-credentials: false
-          fetch-depth: 0
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.12"
-
-      - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-
-      - name: Install dependencies with uv
-        run: |
-          uv sync
-
-      - name: Run tests and generate coverage
-        run: |
-          uv run pytest -m 'not benchmark' --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=tika test/ | tee pytest-coverage.txt
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
 
       - name: Pytest coverage comment
-        id: coverage-comment
+        if: ${{ github.ref == 'refs/heads/master' }}
+        id: coverageComment
         uses: MishaKav/pytest-coverage-comment@main
         with:
           hide-comment: true
-          pytest-coverage-path: ./pytest-coverage.txt
+          pytest-coverage-path: ./data/pytest-coverage_4.txt
 
-      - name: Update README with Coverage Badge
+      - name: Update Readme with Coverage Html
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
-          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n${{ steps.coverage-comment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
 
-      - name: Commit & Push changes
+      - name: Commit & Push changes to Readme
+        if: ${{ github.ref == 'refs/heads/master' }}
         uses: actions-js/push@master
         with:
-          message: "Update coverage badge"
+          message: Update coverage on Readme
           github_token: ${{ secrets.GITHUB_TOKEN }}
