--- a/.github/workflows/update-readme-coverage.yml
+++ b/.github/workflows/update-readme-coverage.yml
@@ -2,9 +2,6 @@ name: Update Coverage on Readme
 on:
   push:
 
-# https://docs.github.com/en/actions/using-jobs/assigning-permissions-to-jobs
-# `contents` is for permission to the contents of the repository.
-# `pull-requests` is for permission to pull request
 permissions:
   contents: write
   checks: write
@@ -30,7 +27,7 @@ jobs:
       - name: Update Readme with Coverage Html
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
-          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n\${{ steps.coverageComment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
+          sed -i '/<!-- Pytest Coverage Comment:Begin -->/,/<!-- Pytest Coverage Comment:End -->/c\<!-- Pytest Coverage Comment:Begin -->\n${{ steps.coverageComment.outputs.coverageHtml }}\n<!-- Pytest Coverage Comment:End -->' ./README.md
 
       - name: Commit & Push changes to Readme
         if: ${{ github.ref == 'refs/heads/master' }}
@@ -38,3 +35,4 @@ jobs:
         with:
           message: Update coverage on Readme
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master # Add this line to explicitly specify the branch
