--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -36,7 +36,7 @@ jobs:
           pip install sphinx furo myst-parser
       - name: Sphinx APIDoc
         run: |
-          sphinx-apidoc -f -o docs/source/ .
+          sphinx-apidoc -f -o docs/source/ src/tika
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/html
