--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ dev = [
     "genbadge[all]>=1.1.1",
     "pytest-html>=4.1.1",
     "safety>=3.2.14",
+    "sphinx>=8.1.3",
+    "furo>=2024.8.6",
+    "myst-parser>=4.0.0",
 ]
 
 [tool.isort]
