--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,18 @@ dev = [
     "pytest-html>=4.1.1",
     "safety>=3.2.14",
     "sphinx>=8.1.3",
-    "furo>=2024.8.6",
     "myst-parser>=4.0.0",
+    "sphinxawesome-theme>=5.3.2",
+    "sphinx-autodoc-typehints>=3.0.1",
+    "sphinx-copybutton>=0.5.2",
+    "sphinx-design>=0.6.1",
+    "sphinxcontrib-mermaid>=1.0.0",
+    "sphinx-sitemap>=2.6.0",
+    "sphinx-togglebutton>=0.3.2",
+    "sphinxemoji>=0.3.1",
+    "sphinx-tabs>=3.4.7",
+    "sphinx-autodoc-defaultargs>=0.1.2",
+    "sphinx-git>=11.0.0",
 ]
 
 [tool.isort]
