--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,20 +9,16 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: write
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -31,23 +27,37 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install dependencies
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Install uv
         run: |
-          pip install sphinx furo myst-parser
-          pip install -e .
+          python -m pip install uv
+
+      - name: Install dependencies with uv
+        run: |
+          uv pip install sphinx furo myst-parser
+          uv pip install --dev -e .
+
       - name: Sphinx APIDoc
         run: |
           sphinx-apidoc -f -o docs/source/ src/tika
+
       - name: Sphinx build
         run: |
           sphinx-build -b html docs/source/ docs/build/html
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: "./docs/build/html"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
