--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.x"
+          python-version: "3.12"
 
       - name: Install uv
         run: |
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install dependencies with uv
         run: |
-          uv pip install sphinx furo myst-parser
+          uv sync
           uv pip install --dev -e .
 
       - name: Sphinx APIDoc
