--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -44,11 +44,11 @@ jobs:
 
       - name: Sphinx APIDoc
         run: |
-          sphinx-apidoc -f -o docs/source/ src/tika
+          uv run sphinx-apidoc -f -o docs/source/ src/tika
 
       - name: Sphinx build
         run: |
-          sphinx-build -b html docs/source/ docs/build/html
+          uv run sphinx-build -b html docs/source/ docs/build/html
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
